<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/org.pet.launchpet2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.pet.launchpet2.MainActivity" >

    <org.pet.launchpet2.ObservableScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:scrollbars="none"
        android:layout_alignParentTop="true"
        android:background="@color/content_background"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <View
                    android:id="@+id/placeholder"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/top_header_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/no_stretch_header"
                android:columnCount="1" >

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/profile_image"
                    android:paddingEnd="5dp"
                    android:paddingStart="16dp"
                    android:src="@drawable/launcher" />

                <TextView
                    android:id="@+id/date_header_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/profile_image"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/date_label"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/top_toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/top_header_image"
                android:background="@color/toolbar_color"
                android:elevation="@dimen/generic_elevation_height" >

                <ImageView
                    android:id="@+id/top_toolbar_refresh_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="30dp"
                    android:contentDescription="@string/app_drawer_content_description"
                    android:src="@drawable/ic_action_refresh" />

                <ImageView
                    android:id="@+id/top_toolbar_scroll_top_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/top_toolbar_refresh_button"
                    android:background="@drawable/ripple_selector"
                    android:contentDescription="@string/app_drawer_content_description"
                    android:src="@drawable/ic_action_arrow_drop_up" />
                
                

                <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/toolbar_loading_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="-3dp"
                    android:indeterminate="true"
                    app:spb_colors="@array/gplus_colors"
                    app:spb_mirror_mode="false"
                    app:spb_progressiveStart_activated="true"
                    app:spb_progressiveStart_speed="1.5"
                    app:spb_progressiveStop_speed="3.4"
                    app:spb_reversed="false"
                    app:spb_sections_count="4"
                    app:spb_speed="2.0"
                    app:spb_stroke_separator_length="4dp"
                    app:spb_stroke_width="4dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/floating_profile_image_holder"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_alignTop="@+id/top_toolbar"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:elevation="@dimen/generic_elevation_height" >

                <ImageView
                    android:id="@+id/secondary_profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/profile_image"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:src="@drawable/launcher" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top_toolbar"
                android:layout_centerHorizontal="true"
                android:background="@color/content_background"
                android:orientation="vertical" >
            </LinearLayout>
        </RelativeLayout>
    </org.pet.launchpet2.ObservableScrollView>

    <RelativeLayout
        android:id="@+id/floating_favorite_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_favorite_button"
            android:layout_width="58dp"
            android:layout_height="58dp"
            fab:fab_colorNormal="@color/primary"
            fab:fab_colorPressed="@color/primary_pressed"
            fab:fab_icon="@drawable/ic_action_star_rate"
            android:clickable="true"
            />
    </RelativeLayout>

</RelativeLayout>